# Chronos-Descent

./: .gitignore  .runsettings  Cargo.toml  Chronos-Descent.csproj  Chronos-Descent.csproj.old  Chronos-Descent.sln  Justfile  README.md  README_zh.md  codemcp.toml  default_bus_layout.tres  export_presets.cfg  icon.png.import  icon.svg.import  justfile  project.godot  rust-toolchain.toml
.cargo/: config.toml
.doc/: README.md  README_zh.md
Assets/: Monocraft-no-ligatures.ttc.import  Temporal Shrine.png.import  joyknob.png.import  joyknobpng.png.import  joyring.png.import  loading.png.import  player.png.import  start_menu_bg.png.import  test_target.png.import  title_bg.png.import
Builder/: Dockerfile  editor_settings.tres  getbutler.sh  godot_export.sh  setup_godot.sh
Resources/: Type1Rooms.tres  player_animation.tres
Scenes/: autoload.tscn  battle_scene.tscn  boardcast_title.tscn  camera.tscn  dungeon.tscn  effect_indicator.tscn  effect_timer.tscn  empty.tscn  loading.tscn  prepare_room.tscn  test_scene.tscn  title.tscn  ui.tscn  virtual_joystick.tscn
Scripts/: Camera.cs  Camera.cs.uid  EffectsContainer.cs  EffectsContainer.cs.uid  EventBus.cs  EventBus.cs.uid  GameManager.cs  GameManager.cs.uid  GameStatistics.cs.uid  GlobalEventBus.cs  GlobalEventBus.cs.uid  UserInputManager.cs  Util.cs  Util.cs.uid  VirtualInput.cs  VirtualInput.cs.uid  VirtualJoystick.cs
Tests/: EffectManagerTest.cs.uid  EffectManagerTests.cs.uid  EffectSystemTest.cs.uid  TestDungeonGenerator.cs  TestDungeonGenerator.cs.uid  TestEntity.cs  TestEntity.cs.uid
Translations/: README.md  (+6 more)
(+1219 files in other folders)
