[package]
name = "chronos-descent"
version = "0.1.0"
edition = "2021"

[dependencies]
enumset = "1.1.5"
log = { version = "*", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
uuid = { version = "1.12", features = ["v4"] }
# Bevy
iyes_perf_ui = { git = "https://github.com/IyesGames/iyes_perf_ui", branch = "main" }
bevy = { version = "0.15" }
bevy-inspector-egui = "0.29.1"


[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"
strip = "debuginfo"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"
bevy = { version = "0.15.2" }
bevy-inspector-egui = "0.29.1"
